--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:preference-v7:28.0.0'
+    implementation 'com.google.android.material:material:1.2.1'
 }
