--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="freijer.app.dropwords">
 
     <application
@@ -8,34 +9,44 @@
         android:label="Словопадения"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Missions"></activity>
-        <activity android:name=".settings.SettingsAndParams" />
-        <activity android:name=".MainActivity">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait"
+        tools:ignore="LockedOrientationActivity"
+
+        >
+        <activity android:name=".settings.SettingsAndParams"
+            android:screenOrientation="portrait"  />
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".GameStart">
+
+        <activity android:name=".GameStart"
+            android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name=".GameStart" />
-
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
+
         </activity>
+
         <activity
             android:name=".SetingsActivity"
-            android:parentActivityName=".GameStart">
+            android:parentActivityName=".GameStart"
+            android:screenOrientation="portrait" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".GameStart" />
+                android:value=".GameStart"
+                android:screenOrientation="portrait" />
         </activity>
 
         <meta-data
             android:name="preloaded_fonts"
-            android:resource="@array/preloaded_fonts" />
+            android:resource="@array/preloaded_fonts"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
